fixed footer height and links gap

--- a/public/footer.css
+++ b/public/footer.css
@@ -34,6 +34,7 @@ i {
         align-items: center;
         position: relative;
         bottom: 0;
+        gap: 2.5rem;
         height: 25vh;
     }
 }
